--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -12,6 +12,10 @@ subtrees:
 
 - caption: Artificial intelligence
   entries:
+  - file: artificial-intelligence/hf-tgi/README.md
+    title: LLMs and Text Generation Inference
+  - file: artificial-intelligence/distributed-sft-jax/README.md
+    title: LLM fine-tuning with JAX
   - file: artificial-intelligence/bert-hg-pytorch/README.md
     title: Pre-training BERT (PyTorch)
   - file: artificial-intelligence/bert-hg-tf/README.md
@@ -26,5 +30,3 @@ subtrees:
     title: Pytorch Lightning
   - file: artificial-intelligence/xgboost-multi-gpu/README.md
     title: Accelerating XGBoost
-  - file: artificial-intelligence/distributed-sft-jax/README.md
-    title: LLM fine-tuning with JAX
