--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -7,9 +7,6 @@ root: index
 subtrees:
 
 - entries:
-  - file: contributor-bios.md
-    title: Blog contributors
-
 - caption: Artificial intelligence
   entries:
   - file: artificial-intelligence/hf-tgi/README.md
@@ -30,3 +27,8 @@ subtrees:
     title: Pytorch Lightning
   - file: artificial-intelligence/xgboost-multi-gpu/README.md
     title: Accelerating XGBoost
+
+- caption: Acknowlegements
+  - file: contributor-bios.md
+    title: Blog contributors
+
