Fixing build and linting

--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -29,6 +29,7 @@ subtrees:
     title: Accelerating XGBoost
 
 - caption: Acknowlegements
+  entries:
   - file: contributor-bios.md
     title: Blog contributors
 
