Minor touch ups to format and content for launch
* Removing files

* Acknowlegements

* Fixing build and linting

* spelling

* build

--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -6,10 +6,6 @@ defaults:
 root: index
 subtrees:
 
-- entries:
-  - file: contributor-bios.md
-    title: Blog contributors
-
 - caption: Artificial intelligence
   entries:
   - file: artificial-intelligence/hf-tgi/README.md
@@ -30,3 +26,9 @@ subtrees:
     title: Pytorch Lightning
   - file: artificial-intelligence/xgboost-multi-gpu/README.md
     title: Accelerating XGBoost
+
+- caption: Acknowledgements
+  entries:
+  - file: contributor-bios.md
+    title: Blog contributors
+
