--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -8,19 +8,28 @@ subtrees:
 
 - caption: Artificial intelligence
   entries:
+  - file: artificial-intelligence/stable-diffusion-aitemplate/README.md
+    title: Stable diffusion (AITemplate)
+  - file: artificial-intelligence/llama2-lora/README.md
+    title: Fine-tune Llama 2 with LoRA
+  - file: artificial-intelligence/hf-tgi/README.md
+    title: LLMs and Text Generation Inference
+  - file: artificial-intelligence/lora-fundamentals/README.md
+    title: LoRA & efficient fine-tuning
+  - file: artificial-intelligence/distributed-sft-jax/README.md
+    title: LLM fine-tuning with JAX
+  - file: artificial-intelligence/xgboost-multi-gpu/README.md
+    title: Accelerating XGBoost
+  - file: artificial-intelligence/pytorch-lightning/README.md
+    title: Pytorch Lightning
+  - file: artificial-intelligence/megatron-deepspeed-pretrain/README.md
+    title: LLM Training with Megatron-DeepSpeed
   - file: artificial-intelligence/bert-hg-pytorch/README.md
     title: Pre-training BERT (PyTorch)
   - file: artificial-intelligence/bert-hg-tf/README.md
     title: Pre-training BERT (TensorFlow)
-  - file: artificial-intelligence/megatron-deepspeed-pretrain/README.md
-    title: LLM Training with Megatron-DeepSpeed
-  - file: artificial-intelligence/pytorch-lightning/README.md
-    title: Pytorch Lightning
-  - file: artificial-intelligence/xgboost-multi-gpu/README.md
-    title: Accelerating XGBoost
 
 - caption: Acknowledgements
   entries:
   - file: contributor-bios.md
     title: Blog contributors
-
