--- a/blogs/sphinx/requirements.txt
+++ b/blogs/sphinx/requirements.txt
@@ -55,6 +55,8 @@ importlib-metadata==7.0.1
     # via sphinx
 importlib-resources==6.1.1
     # via rocm-docs-core
+invoke==2.2.0
+    # via ablog
 jinja2==3.1.2
     # via
     #   myst-parser
@@ -111,7 +113,7 @@ requests==2.31.0
     # via
     #   pygithub
     #   sphinx
-rocm-docs-core==0.33.2
+rocm-docs-core==0.35.0
     # via -r requirements.in
 six==1.16.0
     # via python-dateutil
