Releasing multiple blogs: Sentence transformer, ray, bilingual language model, monai, vLLM, Vision transformer, Retrieval Augmented Generation ---------
Co-authored-by: Eliot Li <eliotli@hotmail.com>
Co-authored-by: Victoria Godsoe <victoria.godsoe@amd.com>
Co-authored-by: Lisa Delaney <lisa.delaney@amd.com>
Co-authored-by: Saad Rahim (AMD) <44449863+saadrahim@users.noreply.github.com>
Co-authored-by: Logan Grado <logan.grado@amd.com>
Co-authored-by: Song <xiaosong@amd.com>
Co-authored-by: Clint <clintg6@users.noreply.github.com>
Co-authored-by: vbayanag <147658931+vbayanag@users.noreply.github.com>
Co-authored-by: phildangamd <148368067+phildangamd@users.noreply.github.com>
Co-authored-by: ffloresy <152216861+ffloresy@users.noreply.github.com>

--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -8,6 +8,8 @@ subtrees:
 
 - caption: Artificial intelligence
   entries:
+  - file: artificial-intelligence/monai-deploy/README.md
+    title: MONAI Deploy
   - file: artificial-intelligence/stable-diffusion-onnx-runtime/README.md
     title: Stable Diffusion (ONNX Runtime)
   - file: artificial-intelligence/nerf/README.md
