--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -4,17 +4,17 @@ on:
   push:
     branches: 
     - develop
-    - main
+    - release
     - 'docs/*'
     - 'roc**'
   pull_request:
     branches: 
     - develop
-    - main
+    - release
     - 'docs/*'
     - 'roc**'
 
 jobs:
   call-workflow-passing-data:
     name: Documentation
-    uses: RadeonOpenCompute/rocm-docs-core/.github/workflows/linting.yml@develop
+    uses: ROCm/rocm-docs-core/.github/workflows/linting.yml@develop
