--- a/.github/workflows/keyword-check.yml
+++ b/.github/workflows/keyword-check.yml
@@ -1,6 +1,6 @@
 # check all mark down files for correct keyword field
 
-name: checking-blog-keywords
+name: Linting
 
 on:
   push:
@@ -18,6 +18,7 @@ on:
 
 jobs:
   check-myst:
+    name: Documentation / Tags
     runs-on: ubuntu-latest
     strategy:
       matrix:
