--- a/blogs/sphinx/requirements.txt
+++ b/blogs/sphinx/requirements.txt
@@ -6,7 +6,7 @@
 #
 ablog==0.11.10
     # via -r requirements.in
-accessible-pygments==0.0.4
+accessible-pygments==0.0.5
     # via pydata-sphinx-theme
 alabaster==0.7.16
     # via sphinx
@@ -57,7 +57,7 @@ jinja2==3.1.4
     # via
     #   myst-parser
     #   sphinx
-lxml==5.2.1
+lxml==5.2.2
     # via feedgen
 markdown-it-py==3.0.0
     # via
@@ -65,7 +65,7 @@ markdown-it-py==3.0.0
     #   myst-parser
 markupsafe==2.1.5
     # via jinja2
-mdit-py-plugins==0.4.0
+mdit-py-plugins==0.4.1
     # via myst-parser
 mdurl==0.1.2
     # via markdown-it-py
@@ -102,7 +102,7 @@ pyyaml==6.0.1
     #   myst-parser
     #   rocm-docs-core
     #   sphinx-external-toc
-requests==2.31.0
+requests==2.32.2
     # via
     #   pygithub
     #   sphinx
@@ -127,16 +127,20 @@ sphinx==7.3.7
     #   sphinx-copybutton
     #   sphinx-design
     #   sphinx-external-toc
+    #   sphinx-hoverxref
     #   sphinx-notfound-page
+    #   sphinxcontrib-jquery
 sphinx-book-theme==1.1.2
     # via rocm-docs-core
 sphinx-copybutton==0.5.2
     # via rocm-docs-core
-sphinx-design==0.5.0
+sphinx-design==0.6.0
     # via rocm-docs-core
 sphinx-external-toc==1.0.1
     # via rocm-docs-core
-sphinx-notfound-page==1.0.0
+sphinx-hoverxref==1.3.0
+    # via -r requirements.in
+sphinx-notfound-page==1.0.2
     # via rocm-docs-core
 sphinxcontrib-applehelp==1.0.8
     # via sphinx
@@ -144,6 +148,8 @@ sphinxcontrib-devhelp==1.0.6
     # via sphinx
 sphinxcontrib-htmlhelp==2.0.5
     # via sphinx
+sphinxcontrib-jquery==4.1
+    # via sphinx-hoverxref
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-qthelp==1.0.7
@@ -160,7 +166,7 @@ urllib3==2.2.1
     # via
     #   pygithub
     #   requests
-watchdog==4.0.0
+watchdog==4.0.1
     # via ablog
 wrapt==1.16.0
     # via deprecated
