--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,7 @@ docs/about/release-notes.md
 docs/about/CHANGELOG.md
 
 .ipynb_checkpoints
+__pycache__
+.pdm-python
 .vs/*
 blogs/artificial-intelligence/.vs/*
