Lora Blog Update
---------

Signed-off-by: Xiaojia Song <xiaosong@useocpm2m-386-003.amd.com>
Signed-off-by: Song <xiaosong@amd.com>
Signed-off-by: Xiaojia Song <xiaosong@useocpm2m-386-002.amd.com>
Co-authored-by: Xiaojia Song <xiaosong@useocpm2m-386-003.amd.com>
Co-authored-by: Xiaojia Song <xiaosong@useocpm2m-386-002.amd.com>

--- a/blogs/sphinx/_toc.yml.in
+++ b/blogs/sphinx/_toc.yml.in
@@ -16,8 +16,8 @@ subtrees:
     title: 3D scene mapping using NeRF
   - file: artificial-intelligence/stable-diffusion-aitemplate/README.md
     title: Stable diffusion (AITemplate)
-  - file: artificial-intelligence/llama2-lora/README.md
-    title: Fine-tune Llama 2 with LoRA
+  - file: artificial-intelligence/llama-lora/README.md
+    title: Fine-tune Llama with LoRA
   - file: artificial-intelligence/hf-tgi/README.md
     title: LLMs and Text Generation Inference
   - file: artificial-intelligence/lora-fundamentals/README.md
